--- a/practice14html/layaut14.css
+++ b/practice14html/layaut14.css
@@ -58,7 +58,9 @@
     margin-top: 10px;
     width: 100%;
     height: 500;
-    background-color: grey;
+    /* background-color: grey; */
+    display: flex;
+    justify-content: space-around;
 }
 /* main_conatiner2 END here_v */
 
@@ -94,9 +96,17 @@
 
 /* main_discription2 started here_v */
 .main_discription2{
-    width: 70%;
+    width: 68%;
     height: 100%;
     background-color: grey;
 }
-
 /* main_discription2 END here_v */
+
+/* footer started  here_v */
+.footer{
+    margin-top: 10px;
+    width: 100%;
+    height: 125px;
+    background-color: grey;
+}
+/* footer END here_v */
